# signalnode

./: .env.example  .gitignore  CLAUDE.md  CONTEXT.md  Cargo.toml  LICENSE  README.md  docker-compose.yml  skills-lock.json
docs/: phase3-handoff.md  phase4-handoff.md  phase5-handoff.md  prd-phase1.md  publish-issues.sh
docs/adr/: 0001-core-and-api-as-separate-processes.md
migrations/: 20260513000000_initial.sql  20260514000002_workspaces.sql  20260514000003_workspace_members.sql  20260514000004_monitors.sql  20260514000005_monitors_crud_fields.sql  20260515000006_check_results.sql  20260515000007_incidents.sql  20260515000008_notification_channels.sql  20260515000009_pending_notifications.sql  20260516000010_pending_notifications_sent_at.sql  20260517000011_monitors_last_checked_at.sql  20260518000012_refresh_tokens.sql  20260518000013_login_attempts.sql  20260528000014_monitors_tcp_fields.sql
signalnode-api/: Cargo.toml
signalnode-api/src/: authz.rs  lib.rs  main.rs  middleware.rs  test_helpers.rs
signalnode-api/src/auth/: error.rs  mod.rs  password.rs  token.rs
signalnode-api/src/check_result/: error.rs  mod.rs
signalnode-api/src/incident/: error.rs  mod.rs
signalnode-api/src/monitor/: error.rs  mod.rs
signalnode-api/src/notification_channel/: error.rs  mod.rs
signalnode-api/src/workspace/: error.rs  mod.rs
signalnode-core/: Cargo.toml
signalnode-core/src/: checker.rs  config.rs  main.rs  purger.rs  worker.rs
signalnode-core/src/deliver/: email.rs  mod.rs  webhook.rs
signalnode-shared/: Cargo.toml
signalnode-shared/src/: incident.rs
(+28 files in other folders)
